apps/healthmap-worldhealthmap/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worldhealthmap-frontend
  namespace: worldhealthmap
  labels:
    app: worldhealthmap-frontend
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: worldhealthmap-frontend
  template:
    metadata:
      labels:
        app: worldhealthmap-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: worldhealthmap-frontend
          image: ghcr.io/curatimexai/nightingale-worldhealthmap:049d8f98f80f6f2a9af4603c3f46dcf68e340487
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8080      
            initialDelaySeconds: 10
            periodSeconds: 30
