apps/healthmap-worldhealthmap/service-frontend.yaml
apiVersion: v1
kind: Service 
metadata: 
   name : worldhealthmap-service-frontend
   namespace: worldhealthmap
spec:
    selector: 
       app : worldhealthmap-frontend
    ports:
       - protocol: TCP
         port: 80
         targetPort: 8080
