apps/healthmap-worldhealthmap/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worldhealthmap-network-policy
  namespace: worldhealthmap
spec:
  podSelector:
    matchLabels:
      app: worldhealthmap-frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
     - protocol: TCP
       port: 8080
